--- a/pipeline.yml
+++ b/pipeline.yml
@@ -14,7 +14,7 @@ nodejs_version: "10"
 build:
   customized_builder_image:
     registry: artifactory
-    url: artifactory.dev.adskengineer.net/docker-local-v2/docker-local-v2/dynamo/dynamolibrariejs:latest
+    url: artifactory.dev.adskengineer.net/docker-local-v2/dynamo/dynamolibrariejs:dotnetcore2
   before_scripts:
     - "npm install"
   scripts:
@@ -23,9 +23,17 @@ build:
 ci_test:
   customized_builder_image:
     registry: artifactory
-    url: artifactory.dev.adskengineer.net/docker-local-v2/docker-local-v2/dynamo/dynamolibrariejs:latest
+    url: artifactory.dev.adskengineer.net/docker-local-v2/dynamo/dynamolibrariejs:dotnetcore2
   scripts:
     - "npm run test"
     - "npm run utiltest"
-  
   test_report_dir: TestResults
+
+deployment:
+-
+  type: customized
+  customized_builder_image:
+    registry: artifactory
+    url: artifactory.dev.adskengineer.net/docker-local-v2/dynamo/dynamolibrariejs:dotnetcore2
+  scripts:
+    - "dotnet --version"
